add category endpoint
