# src/main/kotlin/com/wutsi/platform/account/dto/CategorySummary.kt
@@ -1,0 +1,10 @@
+package com.wutsi.platform.account.dto
+
+import kotlin.Long
+import kotlin.String
+
+public data class CategorySummary(
+    public val id: Long = 0,
+    public val title: String = "",
+    public val titleFrench: String = ""
+)
