# src/main/kotlin/com/wutsi/platform/account/dto/ListCategoryResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.account.dto
+
+import kotlin.collections.List
+
+public data class ListCategoryResponse(
+    public val categories: List<CategorySummary> = emptyList()
+)
